# pocketsphinx-android

./: .classpath  .gitignore  .project  .travis.yml  CMakeLists.txt  README  README.md  build.gradle  build.xml  descriptor.json
.externalToolBuilders/: build.launch
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk
src/edu/cmu/pocketsphinx/: Assets.java  AssetsTask.java  AssetsTaskCallback.java  RecognitionListener.java  SpeechRecognizer.java  SpeechRecognizerBuilder.java  SpeechRecognizerSetup.java  SphinxUtil.java
src/main/java/edu/cmu/pocketsphinx/: Assets.java  SpeechRecognizer.java
